[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/Minimapa/fondoMapa.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/player.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/Minimapa/MiniMapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/estacionRecarga.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/baseEnemiga3.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/interceptor.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/rele.png" type="Texture" id=7]

[node name="MiniMapa" type="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -166.663
margin_right = 144.0
margin_bottom = -4.66284
rect_min_size = Vector2( 288, 162 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
self_modulate = Color( 0.647059, 0.780392, 0.835294, 0.498039 )
margin_right = 288.0
margin_bottom = 162.0
rect_min_size = Vector2( 288, 162 )
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZonaRenderizadoMiniMapa" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 268.0
margin_bottom = 142.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
position = Vector2( 140, 70 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemiga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
self_modulate = Color( 0.768627, 0.129412, 0.517647, 1 )
position = Vector2( 224.253, 36.0407 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="IconoEstacionRecarga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
self_modulate = Color( 0.266667, 0.67451, 0.705882, 1 )
position = Vector2( 233.597, 108.789 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="IconoRele" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.137255, 0.643137, 0.227451, 1 )
position = Vector2( 33.3879, 30.8681 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
self_modulate = Color( 0.792157, 0.12549, 0.12549, 1 )
position = Vector2( 34.6478, 107.093 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
